// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: <Button /> Next: should mount without exploding 1`] = `
<Button
  className="next"
  fn={[Function]}
  text="Next"
>
  <button
    className="next"
    onClick={[Function]}
  >
    Next
  </button>
</Button>
`;

exports[`Component: <Button /> Prev: should mount without exploding 1`] = `
<Button
  className="prev"
  fn={[Function]}
  text="Prev"
>
  <button
    className="prev"
    onClick={[Function]}
  >
    Prev
  </button>
</Button>
`;

exports[`Component: <Button /> Start: should mount without exploding 1`] = `
<Button
  className="start"
  fn={[Function]}
  text="Start"
>
  <button
    className="start"
    onClick={[Function]}
  >
    Start
  </button>
</Button>
`;

exports[`Component: <Button /> Stop: should mount without exploding 1`] = `
<Button
  className="stop"
  fn={[Function]}
  text="Stop"
>
  <button
    className="stop"
    onClick={[Function]}
  >
    Stop
  </button>
</Button>
`;
